<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3D3840"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/qrlogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/qrcode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/interface_image" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome_text"
        android:textColor="#FDB500"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/qrlogo"
        android:layout_marginTop="15dp"
        android:padding="5dp"/>

    <Button
        android:id="@+id/generateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/generatorbutton"
        android:text="@string/generate_qr_code"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/scanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/generateButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/generatorbutton"
        android:text="@string/scan_qr_code"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAllCaps="false"/>

</RelativeLayout>