<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    style="@style/AppTheme.MaterialTheme"
    tools:context=".generateQR">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/textOnImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/your_code_will_appear_here"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="250dp"
            android:layout_height="250dp" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:hint="@string/add_your_text_to_embed_in_qr_code"
        android:padding="5dp"
        app:hintTextColor="@color/white"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edtText"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textImeMultiLine|textMultiLine"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/generateQRCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/generatorbutton"
        android:text="@string/generate_qr_code"
        android:textAllCaps="false"
        android:textSize="20sp"/>
</RelativeLayout>